--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,17 @@
     <properties>
         <java.version>14</java.version>
         <mockito-core.version>3.4.6</mockito-core.version>
+        <postgresql.version>42.2.5</postgresql.version>
+        <hibernate-core.version>5.4.18.Final</hibernate-core.version>
+        <lombok.version>1.18.12</lombok.version>
+
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.5</version>
+            <version>${postgresql.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -34,12 +38,19 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.4.18.Final</version>
+            <version>${hibernate-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -53,6 +64,7 @@
         </dependency>
 
     </dependencies>
+
 
 
 </project>
