--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
         <postgresql.version>42.2.5</postgresql.version>
         <hibernate-core.version>5.4.18.Final</hibernate-core.version>
         <lombok.version>1.18.12</lombok.version>
+        <junit-jupiter-engine.version>5.6.2</junit-jupiter-engine.version>
+        <junit-jupiter-api.version>5.6.2</junit-jupiter-api.version>
+        <mockito-core.version>3.4.6</mockito-core.version>
+        <assertj-core.version>3.16.1</assertj-core.version>
 
     </properties>
 
@@ -30,6 +34,32 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter-api.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-core.version}</version>
+            <scope>test</scope>
+
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-jupiter-engine.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -51,6 +81,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -64,7 +95,6 @@
         </dependency>
 
     </dependencies>
-
 
 
 </project>
