--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,5 +2,5 @@ spring:
   datasource:
     username: "postgres"
     password: "qwerty"
-    url: "jdbc:postgresql://127.0.0.1:5432/test"
+    url: "jdbc:postgresql://127.0.0.1:5432/postgres"
     driverclass: "org.postgresql.Driver"
