Revert "4th commit, find by id methood added"q git status
This reverts commit 94195920d63ce6812754b6a9d97e0b9723dc1efb.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,5 +2,5 @@ spring:
   datasource:
     username: "postgres"
     password: "qwerty"
-    url: "jdbc:postgresql://127.0.0.1:5432/postgres"
+    url: "jdbc:postgresql://127.0.0.1:5432/test"
     driverclass: "org.postgresql.Driver"
